Fix code overflow on default layout

--- a/css/pages/_post.scss
+++ b/css/pages/_post.scss
@@ -104,6 +104,7 @@
     padding: 10px;
     background: #f2f2f2;
     font-size: 14px;
+    overflow-x: scroll;
 
     code {
       background: none;
